<resources>
    <string name="app_name">Costy</string>

    <string name="projects_activity_title">Add/Select Project</string>
    <string name="project_name_hint">Type a project name</string>
    <string name="wrong_project_name">Wrong project name!</string>

    <string name="action_settings">Settings</string>
    <string name="person_name_hint">Type a person name</string>
    <string name="confirm_project_name">OK</string>

    <string name="wrong_person_name">Wrong person name!</string>
    <string name="cannot_delete_users_error">You cannot remove users that are used in expenses!</string>
    <string name="title_activity_expenses">ExpensesActivity</string>

    <string name="sample_project_name">Project Name</string>
    <string name="sample_expense_description">Sample description</string>
    <string name="sample_expense_from">John</string>
    <string name="expense_separator"> ----> </string>
    <string name="sample_expense_to">Kate</string>
    <string name="sample_expense_amount">123.34 PLN</string>
    <string name="sample_person_name">John Doe</string>

    <string name="title_activity_selected_project">SelectedProjectActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_drawer_option_people">People</string>
    <string name="nav_drawer_option_expenses">Expenses</string>
    <string name="nav_drawer_option_settings">Settings</string>
    <string name="nav_drawer_option_change_project">Change Project</string>

    <string name="add_expense_from_label">From:</string>
    <string name="add_expense_to_label">Paid for:</string>
    <string name="add_expense_description_hint">Description</string>
    <string name="add_expense_amount_hint">Amount</string>
    <string name="add_expense_text_when_receivers_selected">"Default (paid for all)"</string>
    <string name="add_expense_select_receivers_dialog_title">"Select receivers"</string>
    <string name="add_expense_provide_amount_error">"Provide amount!"</string>
    <string name="add_expense_provide_description_error">"Provide description!"</string>
    <string name="add_expense_select_receivers_error">"Select receivers!"</string>

    <string name="delete_item">Delete</string>
    <string name="amount_currency_pattern">{0} {1}</string>

    <string name="settings_default_currency">Default currency</string>
    <string name="default_currency_changed">Default currency was changed</string>

    <string name="share_content_text">Share report</string>
    <string name="share_content_type">text/plain</string>

</resources>
