<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_remove"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:title="@string/delete_item" />

</menu>